--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "homepage": "",
   "dependencies": {
-    "@ethereansos/interfaces-core": "0.1.0",
-    "@ethereansos/interfaces-ui": "0.1.1",
+    "@ethereansos/interfaces-core": "^0.3.1",
+    "@ethereansos/interfaces-ui": "^0.3.1",
     "@monaco-editor/react": "^4.1.3",
     "classnames": "^2.2.6",
-    "ipfs-http-client": "51.0.1",
+    "ipfs-http-client": "53.0.1",
     "p-limit": "^3.1.0",
     "pupa": "2.1.1",
     "react": "^17.0.1",
