--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "classnames": "^2.2.6",
     "ipfs-http-client": "53.0.1",
     "p-limit": "^3.1.0",
+    "parallel-each": "^1.1.7",
     "pupa": "2.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
