--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "core-new",
   "version": "0.1.0",
   "private": true,
-  "homepage": "",
+  "homepage": "./",
   "dependencies": {
-    "@ethereansos/interfaces-core": "^0.4.69",
+    "@ethereansos/interfaces-core": "^0.4.71",
     "@ethereansos/interfaces-ui": "^0.4.34",
     "@monaco-editor/react": "^4.1.3",
     "classnames": "^2.2.6",
