--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "npm run use-wallet-optimism-hack && HOST=127.0.0.1 react-scripts start",
     "start:win": "npm run use-wallet-optimism-hack && env HOST=127.0.0.1 react-scripts start",
-    "build": "npm run use-wallet-optimism-hack && react-scripts build && rimraf build/data/context.local.json",
+    "build": "npm run use-wallet-optimism-hack && react-scripts build && node ./postbuild.js",
     "test": "react-scripts test --watchAll false --passWithNoTests",
     "test:dev": "react-scripts test",
     "lint": "eslint src",
@@ -71,7 +71,6 @@
     "lint-staged": "^10.5.0",
     "prettier": "2.3.0",
     "react-error-overlay": "6.0.9",
-    "react-test-renderer": "^17.0.1",
-    "rimraf": "3.0.2"
+    "react-test-renderer": "^17.0.1"
   }
 }
