--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "dependencies": {
     "@ethersproject/hash": "^5.5.0",
     "@monaco-editor/react": "^4.1.3",
+    "@tsparticles/engine": "^3.0.3",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.0.3",
     "@uniswap/v3-sdk": "3.6.3",
     "classnames": "2.2.6",
     "eth-ens-namehash": "2.0.8",
