--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "react": "^17.0.1",
     "react-color": "2.19.3",
     "react-dom": "^17.0.1",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-select": "4.3.1",
+    "react-select": "^5.8.0",
+    "react-step-wizard": "^5.3.11",
     "react-window": "^1.8.6",
     "regenerator-runtime": "0.13.7",
     "sass": "1.30.0",
