--- a/package.json
+++ b/package.json
@@ -5,11 +5,21 @@
   "homepage": "./",
   "dependencies": {
     "@ethersproject/hash": "^5.5.0",
+    "@fseehawer/react-circular-slider": "^2.6.4",
     "@monaco-editor/react": "^4.1.3",
+    "@react-spring/web": "^9.7.3",
     "@tsparticles/engine": "^3.0.3",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.0.3",
     "@uniswap/v3-sdk": "3.6.3",
+    "@visx/axis": "^3.8.0",
+    "@visx/curve": "^3.3.0",
+    "@visx/gradient": "^3.3.0",
+    "@visx/group": "^3.3.0",
+    "@visx/mock-data": "^3.3.0",
+    "@visx/react-spring": "^3.8.0",
+    "@visx/scale": "^3.5.0",
+    "@visx/shape": "^3.5.0",
     "classnames": "2.2.6",
     "eth-ens-namehash": "2.0.8",
     "ethereum-blockies-base64": "^1.0.2",
