--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.8.0",
+    "react-simply-donut": "^2.0.4",
     "react-step-wizard": "^5.3.11",
     "react-window": "^1.8.6",
     "regenerator-runtime": "0.13.7",
