--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "ethereum-blockies-base64": "^1.0.2",
     "ethers": "5.5.1",
     "formik": "2.2.9",
+    "gsap": "^3.12.5",
     "ipfs-http-client": "^53.0.1",
     "js-base64": "3.7.2",
     "jsdoc-to-markdown": "7.0.1",
