--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "^17.0.1",
     "react-color": "2.19.3",
     "react-dom": "^17.0.1",
+    "react-drag-drop-files": "^2.3.10",
     "react-icons": "^5.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
