--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "EthOS ALPHA",
-  "name": "EthereansOS ALPHA Version",
+  "short_name": "EthOS",
+  "name": "EthereansOS",
   "icons": [
     {
       "src": "favicon.ico",
