--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@emotion/styled": "^11.11.5",
     "@ethersproject/hash": "^5.5.0",
     "@fseehawer/react-circular-slider": "^2.6.4",
     "@monaco-editor/react": "^4.1.3",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "@react-spring/web": "^9.7.3",
     "@tsparticles/engine": "^3.0.3",
     "@tsparticles/react": "^3.0.0",
