--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@visx/react-spring": "^3.8.0",
     "@visx/scale": "^3.5.0",
     "@visx/shape": "^3.5.0",
+    "@web3-onboard/injected-wallets": "^2.10.16",
+    "@web3-onboard/react": "^2.8.17",
+    "@web3-onboard/walletconnect": "^2.5.5",
     "classnames": "2.2.6",
     "eth-ens-namehash": "2.0.8",
     "ethereum-blockies-base64": "^1.0.2",
@@ -59,10 +62,8 @@
     "yup": "0.32.9"
   },
   "scripts": {
-    "build": "npm run use-wallet-optimism-hack && react-scripts build && node ./postbuild.js",
-    "start": "npm run use-wallet-optimism-hack && HOST=127.0.0.1 react-scripts start",
-    "start:win": "npm run use-wallet-optimism-hack && env HOST=127.0.0.1 react-scripts start",
-    "use-wallet-optimism-hack": "cp ./use-wallet-optimism-hack.js ./node_modules/use-wallet/dist/esm/index.js"
+    "build": "node run.js build",
+    "start": "node run.js"
   },
   "resolutions": {
     "react-error-overlay": "6.0.9"
