--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dom": "^17.0.1",
     "react-drag-drop-files": "^2.3.10",
     "react-icons": "^5.0.1",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.8.0",
