--- a/package.json
+++ b/package.json
@@ -64,9 +64,9 @@
     "yup": "0.32.9"
   },
   "scripts": {
-  "build": "node run.js build",
-  "start": "NODE_OPTIONS=--openssl-legacy-provider HOST=127.0.0.1 react-scripts start"
-},
+    "build": "node run.js build",
+    "start": "node run.js"
+  },
   "resolutions": {
     "react-error-overlay": "6.0.9"
   },
